@@ -4,11 +4,8 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
-import java.net.ProtocolException;
-import java.net.URL;
+import java.net.URI;
 import java.net.URLConnection;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
@@ -71,11 +68,31 @@ public class WebFunctionTools implements FunctionTools {
 
 	private static final int TIMEOUT = 10000;
 
+	/**
+	 * SonarQube java:S115 - Rename this constant name to match the regular expression.
+	 */
+	private static final String DEFAULT_CHARSET = "UTF-8";
+
+	/**
+	 * SonarQube java:S1192 - Define a constant instead of duplicating this literal.
+	 */
+	private static final String PARAM_HEADERS = "headers";
+
+	/**
+	 * SonarQube java:S1192 - Define a constant instead of duplicating this literal.
+	 */
+	private static final String PARAM_TIMEOUT = "timeout";
+
+	/**
+	 * SonarQube java:S1192 - Define a constant instead of duplicating this literal.
+	 */
+	private static final String PARAM_CHARSET_NAME = "charsetName";
+
+	// SonarQube java:S2119 - Save and re-use this "Random".
+	private static final Random REQUEST_ID_RANDOM = new Random();
+
 	/** Logger for web fetch tool execution and diagnostics. */
 	private static final Logger logger = LoggerFactory.getLogger(WebFunctionTools.class);
-
-	/** Default character set for decoding responses and encoding request bodies. */
-	private static final String defaultCharset = "UTF-8";
 
 	/**
 	 * Optional configuration source used to resolve ${...} placeholders in header
@@ -97,7 +114,7 @@ public class WebFunctionTools implements FunctionTools {
 				"headers:string:optional:Specifies HTTP headers as a single string, with each header in the format NAME=VALUE, separated by newline characters (\\n). If null, no additional headers are sent.",
 				"timeout:integer:optional:The maximum time in milliseconds to wait for the HTTP response. If not specified, a default timeout will be used.",
 				"charsetName:string:optional:The name of the character set to use when decoding the response content. Default: "
-						+ defaultCharset,
+						+ DEFAULT_CHARSET,
 				"textOnly:boolean:optional:If true, only the plain text content of the web page is returned (HTML tags are stripped). If false or not specified, the full HTML content is returned.",
 				"selector:string:optional:If provided, extracts and returns only the content matching the specified CSS selector. If textOnly is also true, returns only the text of the selected elements; otherwise, returns their HTML.");
 
@@ -110,7 +127,7 @@ public class WebFunctionTools implements FunctionTools {
 				"body:string:optional:The request body to send (for POST, PUT, PATCH, etc.).",
 				"timeout:integer:optional:The maximum time in milliseconds to wait for the HTTP response. If not specified, a default timeout will be used.",
 				"charsetName:string:optional:The name of the character set to use when decoding the response content. Default: "
-						+ defaultCharset);
+						+ DEFAULT_CHARSET);
 	}
 
 	/**
@@ -147,7 +164,8 @@ public class WebFunctionTools implements FunctionTools {
 	 * @return response content or an error message
 	 */
 	public String getWebContent(Object[] params) {
-		String requestId = Integer.toHexString(new Random().nextInt());
+		// SonarQube java:S2119 - Save and re-use this "Random".
+		String requestId = Integer.toHexString(REQUEST_ID_RANDOM.nextInt());
 		logger.info("Fetching web content [{}]: {}", requestId, Arrays.toString(params));
 
 		JsonNode props = (JsonNode) params[0];
@@ -155,15 +173,15 @@ public class WebFunctionTools implements FunctionTools {
 
 		url = replace(url, configurator);
 
-		String headers = props.has("headers") ? props.get("headers").asText(null) : null;
-		int timeout = props.has("timeout") ? props.get("timeout").asInt(TIMEOUT) : TIMEOUT;
-		String charsetName = props.has("charsetName") ? props.get("charsetName").asText(defaultCharset)
-				: defaultCharset;
+		String headers = props.has(PARAM_HEADERS) ? props.get(PARAM_HEADERS).asText(null) : null;
+		int timeout = props.has(PARAM_TIMEOUT) ? props.get(PARAM_TIMEOUT).asInt(TIMEOUT) : TIMEOUT;
+		String charsetName = props.has(PARAM_CHARSET_NAME) ? props.get(PARAM_CHARSET_NAME).asText(DEFAULT_CHARSET)
+				: DEFAULT_CHARSET;
 		boolean textOnly = props.has("textOnly") && props.get("textOnly").asBoolean(false);
 		String selector = props.has("selector") ? props.get("selector").asText(null) : null;
 
 		try {
-			HttpURLConnection connection = (HttpURLConnection) getConnection(new URL(url), headers, charsetName);
+			HttpURLConnection connection = (HttpURLConnection) getConnection(URI.create(url), headers);
 			logger.info("[WEB {}] URL: {}", requestId, connection.getURL());
 
 			String response = getWebPage(connection, timeout, charsetName);
@@ -204,28 +222,23 @@ public class WebFunctionTools implements FunctionTools {
 	 * set an HTTP Basic {@code Authorization} header.
 	 * </p>
 	 *
-	 * @param url         URL to connect to
-	 * @param headers     optional headers (newline-separated {@code NAME=VALUE})
-	 * @param charsetName charset name (currently unused, but kept for API symmetry)
+	 * @param uri     URI to connect to
+	 * @param headers optional headers (newline-separated {@code NAME=VALUE})
 	 * @return connection
 	 * @throws IOException if opening a connection fails
 	 */
-	private URLConnection getConnection(URL url, String headers, String charsetName) throws IOException {
+	private URLConnection getConnection(URI uri, String headers) throws IOException {
 		URLConnection connection;
 
-		String userInfo = url.getUserInfo();
-		if (userInfo != null) {
-			String cleanUrl = url.toString().replace("//" + userInfo + "@", "//");
+		String userInfo = uri.getUserInfo();
+		URI cleanUri = userInfo == null ? uri : URI.create(uri.toString().replace("//" + userInfo + "@", "//"));
 
-			url = new URL(cleanUrl);
-			connection = (HttpURLConnection) url.openConnection();
+		connection = cleanUri.toURL().openConnection();
 
+		if (userInfo != null && connection instanceof HttpURLConnection) {
 			byte[] bytes = userInfo.getBytes(StandardCharsets.UTF_8);
 			String basicToken = Base64.getEncoder().encodeToString(bytes);
 			connection.setRequestProperty("Authorization", "Basic " + basicToken);
-
-		} else {
-			connection = url.openConnection();
 		}
 
 		if (connection instanceof HttpURLConnection) {
@@ -244,8 +257,7 @@ public class WebFunctionTools implements FunctionTools {
 	 * @return response content including an initial status line
 	 * @throws IOException if the request cannot be executed
 	 */
-	private String getWebPage(HttpURLConnection connection, int timeout, String charsetName)
-			throws IOException, MalformedURLException, ProtocolException, UnsupportedEncodingException {
+	private String getWebPage(HttpURLConnection connection, int timeout, String charsetName) throws IOException {
 		StringBuilder output = new StringBuilder();
 
 		connection.setRequestMethod("GET");
@@ -292,7 +304,8 @@ public class WebFunctionTools implements FunctionTools {
 	 *         message
 	 */
 	public String callRestApi(Object[] params) {
-		String requestId = Integer.toHexString(new Random().nextInt());
+		// SonarQube java:S2119 - Save and re-use this "Random".
+		String requestId = Integer.toHexString(REQUEST_ID_RANDOM.nextInt());
 		logger.info("Executing REST call [{}]: {}", requestId, Arrays.toString(params));
 
 		JsonNode props = (JsonNode) params[0];
@@ -301,15 +314,14 @@ public class WebFunctionTools implements FunctionTools {
 		url = replace(url, configurator);
 
 		String method = props.has("method") ? props.get("method").asText("GET") : "GET";
-		String headers = props.has("headers") ? props.get("headers").asText(null) : null;
+		String headers = props.has(PARAM_HEADERS) ? props.get(PARAM_HEADERS).asText(null) : null;
 		String body = props.has("body") ? props.get("body").asText(null) : null;
-		int timeout = props.has("timeout") ? props.get("timeout").asInt(TIMEOUT) : TIMEOUT;
-		String charsetName = props.has("charsetName") ? props.get("charsetName").asText(defaultCharset)
-				: defaultCharset;
+		int timeout = props.has(PARAM_TIMEOUT) ? props.get(PARAM_TIMEOUT).asInt(TIMEOUT) : TIMEOUT;
+		String charsetName = props.has(PARAM_CHARSET_NAME) ? props.get(PARAM_CHARSET_NAME).asText(DEFAULT_CHARSET)
+				: DEFAULT_CHARSET;
 
 		try {
-			URL callUrl = new URL(url);
-			HttpURLConnection connection = (HttpURLConnection) getConnection(callUrl, headers, charsetName);
+			HttpURLConnection connection = (HttpURLConnection) getConnection(URI.create(url), headers);
 			logger.info("[REST {}] URL: {}", requestId, connection.getURL());
 
 			connection.setRequestMethod(method);
@@ -344,7 +356,8 @@ public class WebFunctionTools implements FunctionTools {
 			return result;
 
 		} catch (Exception e) {
-			logger.error("[REST {}] IO error during REST call: {}", requestId, e.getMessage());
+			// SonarQube java:S2629 - Invoke method(s) only conditionally.
+			logger.error("[REST {}] IO error during REST call", requestId, e);
 			return "IO Error: " + e.getMessage();
 		}
 	}
